--- a/electronic/views/product_views.xml
+++ b/electronic/views/product_views.xml
@@ -12,13 +12,12 @@
         <field name="model">product</field>
         <field name="arch" type="xml">
             <form string="Test">
+             <header>
+                    <button name="action_sold" type="object" string="Sold"/>
+                    <button name="action_cancel" type="object" string="Cancel"/>
+                    <field name="state" widget="statusbar"/>
+                </header>
                 <sheet>
-
-                    <header>
-                        <field name="state" widget="statusbar"
-                            statusbar_visible="new,sold" />
-                    </header>
-
                     <h1>
                         <field name="name" />
                     </h1>
