--- a/electronic/views/product_views.xml
+++ b/electronic/views/product_views.xml
@@ -5,16 +5,16 @@
         <field name="res_model">product</field>
         <field name="view_mode">tree,form</field>
     </record>
-    <!--        Form View       -->
+                        <!--        Form View       -->
 
     <record id="product_details_form" model="ir.ui.view">
         <field name="name">Product Details Form</field>
         <field name="model">product</field>
         <field name="arch" type="xml">
             <form string="Test">
-             <header>
-                    <button name="action_sold" type="object" string="Sold"/>
-                    <button name="action_cancel" type="object" string="Cancel"/>
+              <header>
+                    <button name="action_sold" type="object" string="Sold"  class ='oe_highlight' attrs="{'invisible':[('state', 'in', ('sold', 'canceled'))]}"/>
+                    <button name="action_cancel" type="object" string="Cancel" attrs="{'invisible':[('state', 'in', ('sold', 'canceled'))]}"/>
                     <field name="state" widget="statusbar"/>
                 </header>
                 <sheet>
@@ -24,26 +24,17 @@
                     <group>
                         <group>
                             <field name="company_name" string="Company Name" />
+                            <field name="state" string="Status" readonly='True'/>
                         </group>
-                        <group>
-                           
+                        <group> 
                             <field name="price" string="Price" />
                         </group>
                     </group>
-
                     <notebook>
-                        <page name="description">
+                        <page name="description" string="Description">
                             <group>
-                                <group>    
                             <field name="description"/>
-                                </group>
-                            </group>
-                        </page>
-                        <page name="product_details" string="Product Details">
-                            <group>
-                                <group>
-                                    <field name="product_mfg" string="Product Mfg Date" />
-                                </group>
+                            <field name="product_mfg"/>
                             </group>
                         </page>
                     </notebook>
@@ -79,11 +70,12 @@
         <field name="name">product tree</field>
         <field name="model">product</field>
         <field name="arch" type="xml">
-            <tree string="Product">
+            <tree string="Product" decoration-success="state=='sold'" decoration-danger="state=='canceled'" >
                 <field name="name" />
                 <field name="company_name" />
                 <field name="product_mfg" />
-                <field name="price" />
+                <field name="price"/>
+                <field name="state"/>
             </tree>
         </field>
     </record>
